[gd_scene load_steps=5 format=3 uid="uid://dim0nwjmfwi3g"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://d1rk5ob1oyitb" path="res://components/popups/suitor_popup.gd" id="2"]
[ext_resource type="Script" uid="uid://qeyobl0rg2cy" path="res://components/apps/fumble/stat_progress_bar.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://drm1apbdsjj5g" path="res://components/portrait/portrait_view.tscn" id="4"]

[node name="SuitorPopup" type="Panel"]
theme = ExtResource("1")
script = ExtResource("2")
window_title = "Suitor"
default_window_size = Vector2(400, 500)
is_popup = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Portrait" parent="MarginContainer/VBox" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2

[node name="RelationshipStageLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="RelationshipBar" type="ProgressBar" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3")

[node name="NextStageButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Take this relationship to the next stage"

[node name="AffinityBar" type="ProgressBar" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GiftButton" type="Button" parent="MarginContainer/VBox/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Gift"

[node name="DateButton" type="Button" parent="MarginContainer/VBox/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Date"

[node name="BreakupButton" type="Button" parent="MarginContainer/VBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Breakup"
